<resources>
    <string name="app_name">i News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="times_of_india">Times of India</string>
    <string name="amar_ujala">Amar Ujala</string>
    <string name="denik_jagran">Denik Jagran</string>
    <string name="the_hindu">The Hindu</string>
    <string name="hindustan_times">Hindustan Times</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_news">i News</string>
    <string name="made_by">Made By</string>
    <string name="handmade">HandMade</string>
</resources>