<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/toi"

            android:title="@string/times_of_india" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_ht"
            android:title="@string/hindustan_times" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ti"
            android:title="@string/the_hindu" />
        <item
            android:id="@+id/djfrag"
            android:icon="@drawable/ic_dj"
            android:title="@string/denik_jagran" />
        <item
            android:id="@+id/au"
            android:icon="@drawable/ic_au"
            android:title="@string/amar_ujala" />
    </group>
</menu>