<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.inews.ui.toi.HomeFragment"
        android:label="@string/times_of_india"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.inews.ui.ht.GalleryFragment"
        android:label="@string/hindustan_times"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.inews.ui.thehindu.SlideshowFragment"
        android:label="@string/the_hindu"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/au"
        android:name="com.example.inews.Fragments.am_fragment"
        android:label="@string/amar_ujala"
        tools:layout="@layout/fragment_am_fragment" />
    <fragment
        android:id="@+id/djfrag"
        android:name="com.example.inews.Fragments.dj_framgment"
        android:label="@string/denik_jagran"
        tools:layout="@layout/fragment_dj_framgment" />
</navigation>